tests/neg/syntax_pp_unclosed_ifdef.baa
// EXPECT: نهاية الملف قبل إغلاق #إذا_عرف

#إذا_عرف ميزة_غير_موجودة
صحيح س = ١.
